Revert "Removed material history"
This reverts commit acf21ee321268c03b85574fd38dd0dfbd450cde1.

--- a/css/general.css
+++ b/css/general.css
@@ -265,7 +265,23 @@
 	@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 	@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 	@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
-
+/*Markdown*/
+	.markdown li {
+		list-style: initial;
+		cursor: inherit;
+	}
+	.markdown ul {
+		padding-left: 24px;
+	}
+	.markdown ol {
+		padding-left: 24px;
+	}
+	.markdown ol li {
+		list-style: auto;
+	}
+	.markdown a {
+		cursor: pointer;
+	}
 
 /*Actions*/
 	.toolbar {
@@ -327,14 +343,18 @@
 		color: var(--color-text);
 	}
 	.tool i {
-		display: inline-block;
-		margin-top: 4px;
+		display: block;
+		margin: 4px auto;
 	}
 	.tool:active .icon {
 		padding-top: 1px;
 	}
 	.tool:active .icon.fa_big {
 		padding-top: 2px;
+	}
+	img.icon {
+		height: 26px;
+		image-rendering: pixelated;
 	}
 
 	.tool.enabled {
@@ -354,11 +374,6 @@
 
 	.tool:hover {
 		color: var(--color-light);
-	}
-	.tool.head_right {
-		margin-top: -29px;
-		height: 24px;
-		float: right;
 	}
 	.tool.right_tool {
 		position: relative;
@@ -576,8 +591,7 @@
 		height: 2px;
 		width: 100%;
 		padding: 0;
-		background-color: var(--color-bright_ui_text);
-		opacity: 0.28;
+		background-color: var(--color-menu_separator);
 	}
 	.contextMenu li.highlighted {
 		animation: menu_item_highlight 1s infinite ease-in-out;
@@ -626,7 +640,7 @@
 	body.theme_borders .contextMenu,
 	body.theme_borders dialog,
 	body.theme_borders .dialog_close_button,
-	body.theme_borders #start_screen content,
+	body.theme_borders #start_screen > content,
 	body.theme_borders #quick_message_box,
 	body.theme_borders action_selector > #action_selector_list
 	{
